kubernates/mysqldeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysqllatestimage
        name: mysql
        imagePullPolicy: Never
        ports:
        - containerPort: 3306
          name: mysql
