kubernates/python.yaml
apiVersion: v1
kind: Pod
metadata:
  name: python
  labels:
    name: python
spec:
  containers:
  - name: python-flask-app-container
    image: pythonimage
    imagePullPolicy: Never
