kubernates/pythondeployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-deployment
  labels:
    app: flaskapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskapi
  template:
    metadata:
      labels:
        app: flaskapi
    spec:
      containers:
        - name: pythonwebapp
          image: shravansonone/pythonimage
          ports:
            - containerPort: 9000
          resources:
            requests:
              cpu: 0.025
            limits:
              cpu: 0.05

---
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: flaskapi
  type: LoadBalancer
