kubernates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-flask
  labels:
    name: python-flask
spec:
  type: NodePort
  ports:
    - port: 9000
      nodePort: 30443
      name: https
  selector:
    run: python-flask
