kubernates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: days-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  

spec:
  rules:
    - host: shravan.com
      http:
        paths:
          - path: /
            pathType: Prefix  
            backend:
              service:
                name: python-service
                port:
                  number: 9000
          - path: "/form"
            pathType: Prefix
            backend:
              service:
                name: python-service
                port:
                  number: 9000
